--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -41,7 +41,6 @@
 }
 #nav-list a {
   color: #951C49;
-  text-align: center;
 }
 #nav-list a:hover {
   background: #E7E7E7;
@@ -61,11 +60,11 @@
 
 h2 {
   margin-bottom: 25px;
-  text-align: center;
 }
 
 .box {
-  margin-bottom: 3em;
+  margin-bottom: 1em;
+  width: 100%;
 }
 
 h4 {
@@ -77,6 +76,5 @@ h4 {
 @media (min-width: 1200px) {
   .container .box {
       width: 100%;
-      position: relative;
   }
 }
